<resources>
    <string name="app_name">Love Yourself</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_exit">Exit App</string>
    <string name="action_change_pin">Change Pin</string>

    <!--LOGIN-->
    <string name="action_sign_in_short">Register</string>
    <string name="firstname">First Name</string>
    <string name="lastname">Last Name</string>
    <string name="email">Email</string>
    <string name="contact_number">Contact Number</string>
    <string name="location">City</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_username">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_password_retype">Retype Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_login_google">GOOGLE</string>
    <string name="btn_login_facebook">FACEBOOK</string>
    <string name="btn_anon">ENTER ANONYMOUSLY</string>
    <string name="btn_link_to_register">Not a member? Get registered in Love Yourself now!</string>
    <string name="btn_link_to_resend">Resend Verification Email</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="title_activity_maps">Map</string>

    <string name="hello_world">Hello world!</string>
    <string name="activity_not_locked_text">Nothing should happen on this page, here for test purpose</string>
    <string name="activity_dialog_title">Forgot you Pincode?</string>
    <string name="activity_dialog_accept">OK</string>
    <string name="activity_dialog_decline">CANCEL</string>
    <string name="activity_dialog_content">Tap \'OK\' to log out, when you log back in you\'ll be able to create a new Pincode.\n\nIf you remember your Pincode, tap \'Cancel\' to go back.</string>
    <string name="activity_appcompat_message">I am a PinCompatActivity!</string>


</resources>
